# testboat

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: commands.md  getting-started.md  index.md  test-reports.md
docs/reports/: closure-v1.0.0.html  index.html  sprint-v1.0.0.html  strategy-v1.0.0.html
src/ftest/: __init__.py  cli.py
src/ftest/commands/: active.py  bug.py  case.py  enable.py  exec_.py  init.py  plan.py  preview.py  report.py  result.py  strategy.py  tag.py  validate.py  version.py
src/testboat/: __init__.py  cli.py
src/testboat/commands/: active.py  bug.py  case.py  enable.py  exec_.py  init.py  plan.py  preview.py  report.py  result.py  strategy.py  tag.py  validate.py  version.py
tests/commands/: test_bug.py  test_case.py  test_enable.py  test_init.py  test_plan.py  test_report.py  test_result.py  test_strategy.py  test_tag.py  test_validate.py  test_version.py
