[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftest"
version = "0.1.0"
description = "Manage tests like code — CLI + AI agent skill for the complete testing lifecycle"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Marvin Li" }]
keywords = ["testing", "test-management", "ai-agent", "cli", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/lijma/ftest"
Documentation = "https://lijma.github.io/ftest/"
Repository = "https://github.com/lijma/ftest"
Issues = "https://github.com/lijma/ftest/issues"

[project.scripts]
ftest = "ftest.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ftest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ftest --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/ftest"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
