[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testboat"
dynamic = ["version"]
description = "Manage tests like code — CLI + AI agent skill for the complete testing lifecycle"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Marvin Li" }]
keywords = ["testing", "test-management", "ai-agent", "cli", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/lijma/testboat"
Documentation = "https://lijma.github.io/testboat/"
Repository = "https://github.com/lijma/testboat"
Issues = "https://github.com/lijma/testboat/issues"

[project.scripts]
testboat = "testboat.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/testboat/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=testboat --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/testboat"]

[tool.coverage.report]
omit = ["src/testboat/_version.py"]
exclude_lines = [
    "if __name__ == .__main__.:",
]
